Test mock uvw handle

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(tests
-    sml/test_session.cpp)
+    sml/test_session.cpp
+    mocks.cpp)
 
-target_link_libraries(tests sml::sml GTest::gmock_main)
+target_link_libraries(tests sml::sml uvw::uvw GTest::gmock_main)
 add_test(NAME tests COMMAND tests)
