--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_executable(tests
     sml/test_session.cpp
-    mocks.cpp)
+    test_mocks.cpp)
 
 target_link_libraries(tests sml::sml uvw::uvw GTest::gmock_main)
 add_test(NAME tests COMMAND tests)
