--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,3 +44,5 @@ target_link_libraries(tomsksoft-client
     nlohmann_json::nlohmann_json)
 
 add_subdirectory(test)
+
+install(TARGETS tomsksoft-server tomsksoft-client)
